# rag-system

./: README.md  list_models.py  test_quiz.py  test_upload.py
backend/: .gitignore  pyproject.toml  test_api.py  test_embedding_dim.py  test_quiz.py
backend/app/: config.py  main.py  schema.py
backend/app/services/: embeddings.py  generation.py  ingestion.py  metrics.py  retrieval.py  vector_store.py
docs/: ancient_rome.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DocumentUpload.css  DocumentUpload.jsx  JeopardyBoard.css  JeopardyBoard.jsx  MetricsDashboard.css  MetricsDashboard.jsx  MetricsDisplay.jsx
